clang/test/BSC/Negative/Ownership/RuleCheck/Maple/while/while.cbs
// RUN: %clang_cc1 -verify %s

int rand();
int * _Owned assign();

void func1() {
    int * _Owned a;
    while (rand()) {
        a = assign(); // expected-error {{assign to _Owned value: `a`}}
    }
} // expected-error {{memory leak of value: `a`}}

void func2() {
    int * _Owned a;
    int * _Owned b;
    while (rand()) {
        b = assign();
        a = b; // expected-error {{assign to _Owned value: `a`}}
    }
} // expected-error {{memory leak of value: `a`}}

void func3() {
    int * _Owned a;
    int * _Owned b;
    int c;
    while (rand()) {
        if (c) {
            continue;
        }
        if (c) {
            continue;
        }
        b = assign();
        a = b; // expected-error {{assign to _Owned value: `a`}}
    }
} // expected-error {{memory leak of value: `a`}}

void func4() {
    int * _Owned a;
    int * _Owned b;
    int c;
    if (rand()) {
        goto label1;
    }
    while (rand()) {
        if (c) {
            continue;
        }
label1:
        if (c) {
            continue;
        }
        while (rand()) {
            b = assign(); // expected-error {{assign to _Owned value: `b`}}
        }
    }
} // expected-error {{memory leak of value: `b`}}

void func5() {
    int * _Owned a;
    int * _Owned b;
    int c;
    if (rand()) {
        goto label1;
    }
    while (rand()) {
        if (c) {
            continue;
        }
label1:
        if (c) {
            continue;
        }
        while (rand()) {
            a = b; // expected-error {{assign to _Owned value: `a`}} expected-error {{use of uninitialized value: `b`}}
        }
    }
} // expected-error {{memory leak of value: `a`}}

void func6() {
    int * _Owned a;
    int * _Owned b;
    int c;
    if (rand()) {
        goto label1;
    }
    while (rand()) {
        if (c) {
            continue;
        }
label1:
        if (c) {
            continue;
        }
        while (rand()) {
            b = assign();
            a = b; // expected-error {{assign to _Owned value: `a`}}
        }
    }
} // expected-error {{memory leak of value: `a`}}

void func7() {
    int * _Owned a;
    int * _Owned b;
    int c;
    if (rand()) {
        goto label1;
    }
    while (rand()) {
        if (c) {
            continue;
        }
label1:
        if (c) {
            continue;
        }
        while (rand()) {
            b = assign(); // expected-error {{assign to _Owned value: `b`}}
        }
    }
} // expected-error {{memory leak of value: `b`}}

int main() { return 0; }